attendance page added, newPost, editPost edited to work with data. still bug with updating to db when attendance is taken. vue-swing and vue-swipe packages were added

--- a/client/index.html
+++ b/client/index.html
@@ -8,5 +8,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <link rel="stylesheet" href="../node-modules/vue-swipe/dist/vue-swipe.css" charset="utf-8">
+    <script src="../node-modules/vue-swipe/dist/vue-swipe.js"></script>
   </body>
 </html>
