--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,8 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <link rel="stylesheet" href="../node-modules/vue-swipe/dist/vue-swipe.css" charset="utf-8">
-    <script src="../node-modules/vue-swipe/dist/vue-swipe.js"></script>
+    <!-- <link rel="stylesheet" href="../node-modules/vue-swipe/dist/vue-swipe.css" charset="utf-8"> -->
+    <link rel="stylesheet" href="static/bootstrap.min.css" charset="utf-8">
+    <!-- <script src="../node-modules/vue-swipe/dist/vue-swipe.js"></script> -->
   </body>
 </html>
